Made Font Changes

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -22,7 +22,8 @@
 
 .headingtext {
   padding-top: 13rem;
-  font-size: 4rem;    
+  font-size: 4rem;  
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;  
 }
 
 .stripe {
