--- a/src/app/coi/coi.component.css
+++ b/src/app/coi/coi.component.css
@@ -11,12 +11,13 @@ body{
     align-items: center;    
     margin: auto;
     padding: 2rem;    
-    margin-bottom: 1rem;
+    margin-bottom: 1rem;    
 }
 
 .heading{
     font-size: 5rem;
     color: #9b2350;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .center{
