--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -30,6 +30,7 @@ body {
 .heading {
   color: white;
   font-size: 5rem;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .footerc {
