--- a/src/app/services/services.component.scss
+++ b/src/app/services/services.component.scss
@@ -10,7 +10,7 @@
   background: #e1e1e1;
   text-align: center;
   color: black;  
-  text-decoration: none
+  text-decoration: none; 
   
 }
 
@@ -55,7 +55,7 @@
 }
 .deg320 {
   transform: rotate(270deg) translate(12em) rotate(-270deg);
-  padding-top: 2rem;
+  padding-top: 2.5rem;
 }
 
 .deg325 {
