--- a/src/app/visions/visions.component.html
+++ b/src/app/visions/visions.component.html
@@ -1,7 +1,8 @@
-<div class="parallaxone">
+<div class="parallaxone" >
+  
 </div>
-<div class="image" >
-  <div class="container-fluid" id="visionandmission">
+<div class="image" id="visionandmission">
+  <div class="container-fluid">
     <div class="row pc" style="padding-top: 1rem ;">
       <div class="col-sm-12 col-lg-7" style="background-color: #9b2350;">
         <p class="text1">
@@ -17,7 +18,7 @@
 
       </div>
       <div class="col-sm-12 col-lg-6" style="background-color: #e1e1e1;">
-        <p class="text2">
+        <p class="text2" >
           statements will be fulfilled by:
         </p>
       </div>
@@ -73,4 +74,5 @@
     </div>
   </div>
 </div>
-<div class="parallaxtwo"></div>
+<div class="parallaxtwo" ></div>
+<div  id="servicesid" style="padding-top: 5rem;"> </div>
