--- a/src/app/aboutus/aboutus.component.css
+++ b/src/app/aboutus/aboutus.component.css
@@ -86,11 +86,11 @@ body {
   .box {
     background-color: #e1e1e1;
     height: 12rem;
-    width: 25rem;
+    width: 17rem;
     border-radius: 0.5rem;
     text-align: center;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 1.2rem;
+    font-size: 1rem;
     padding: 1rem;    
     margin: auto;
     margin-top: 2rem;
@@ -119,9 +119,22 @@ body {
 }
 
 @media screen and (min-width: 769px)and (max-width: 1200px) {
-  .mob {
+  .pc {
     display: none;
   }
+
+  .box {
+    background-color: #e1e1e1;
+    height: 12rem;
+    width: 25rem;
+    border-radius: 0.5rem;
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 1.2rem;
+    padding: 1rem;    
+    margin: auto;
+    margin-top: 2rem;
+  } 
 }
 
 @media screen and (min-width: 1201px) and (max-width: 1470px) {
