--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -31,6 +31,7 @@ body {
   color: white;
   font-size: 5rem;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  text-align: center;
 }
 
 .footerc {
@@ -86,7 +87,7 @@ body {
 
 }
 
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (min-width: 200px) and (max-width: 480px) {
   .pc {
     display: none;
   }
@@ -102,6 +103,8 @@ body {
   .cen {
     justify-content: center;
   }
+
+
 }
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
