Removed deceased estates

--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -10,12 +10,12 @@
     <section id="absolute-canvas">
       <img src="./images/logoWithShadow.png" id="logo" class="img-responsive animated zoomIn" alt="" title="СП ФИНКИ" />
       <div id="nav-container">
-        <a href='#' class='deg0'>Litigation</a>
+        <a href='#' class='deg0'>Services</a>
         <a href='#' class='deg45'>Conveyancing</a>
         <a href='#' class='deg135'>Commercial Transactions</a>
         <a href='#' class='deg180'>Debt Collection</a>
         <a href='#' class='deg225'>Labour Law</a>
-        <a href='#' class='deg315'>Deceased Estates</a>
+        <a href='#' class='deg315'>Litigation</a>
         <a href='#' class='deg320'>Insolvency and Estates</a>
         <a href='#' class='deg325'>Personal Injury</a>
         <a href='#' class='deg360'>Trusts</a>
