--- a/src/app/services/services.component.scss
+++ b/src/app/services/services.component.scss
@@ -31,6 +31,7 @@
 
 .deg0 {    
     padding-top: 3rem;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   }
 
 .deg45 {
