--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,23 +9,21 @@
             aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="collapsibleNavId" style="justify-content: right;">
-            <div class="alignright">
-              <ul class="navbar-nav mt-2 mt-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link" href="#homeid">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#visionandmission">About Us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#servicesid">Services</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#contact">Contact Us</a>
-                </li>
-              </ul>
-            </div>
+          <div class="collapse navbar-collapse" id="collapsibleNavId">
+            <ul class="navbar-nav mt-2 mt-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="#homeid">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#visionandmission">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#servicesid">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact Us</a>
+              </li>
+            </ul>
           </div>
         </nav>
 
