--- a/src/app/visions/visions.component.html
+++ b/src/app/visions/visions.component.html
@@ -57,9 +57,9 @@
         </div>
         <div class="row">
           <div class="col-sm-12 col-lg-6">
-            <p id="boxlong">
+            <div id="boxlong">
               Establishing professional cost-effective and quality representation.
-            </p>
+            </div>
           </div>
           <div class="col-sm-12 col-lg-6">
             <p id="boxlong">
