--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -23,7 +23,7 @@
 }
 
 .nav-item {
-  padding: 1rem;  
+  padding: 1rem;
 }
 
 .navbar-light .navbar-nav .nav-link:hover {
@@ -32,83 +32,105 @@
 
 .navbar-nav {
   margin-right: 1rem;
+
 }
 
 .nav-item:hover {
   color: #9b2350;
+
+
 }
 
 .nav-link:hover {
   color: #9b2350;
+
 }
+
+.navbar-nav{
+ margin-left: 40%;
+}
+
+
 
 /* DYNAMIC NAVIGATION BAR
    ================================================================= */
 
-   #nav {
-    position: fixed;
-    width: 100%;
-    top: 0;  
-    z-index:10;
-    margin: 0;        
-  }
+#nav {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 10;
+  margin: 0;
+}
 
 
-  @media screen and (min-width: 320px)and (max-width: 480px) {
-    .img-fluid {
-      display: none;
-    }
+@media screen and (min-width: 320px)and (max-width: 480px) {
+  .img-fluid {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 481px)and (max-width: 768px) {
+  .logo1 {
+    width: 3rem;
   }
 
-  @media screen and (min-width: 481px)and (max-width: 768px) {
-    .logo1 {
-      width: 3rem;
-    }
-    
-    .logo2 {
-      width: 12rem;
-      margin-left: 1rem;
-    }
-    
-    .nav-link {
-      color: #333333;
-      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-      font-size: 1rem;
-      text-align: center;
-    }   
-  }
-  
-  @media screen and (min-width: 769px)and (max-width: 1200px) {
-    .logo1 {
-      width: 4rem;
-    }
-    
-    .logo2 {
-      width: 14rem;      
-    }
-    
-    .nav-link {
-      color: #333333;
-      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-      font-size: 1.2rem;
-      text-align: center;
-    }
+  .logo2 {
+    width: 12rem;
+    margin-left: 1rem;
   }
 
-  @media screen and (min-width: 1201px) and (max-width: 1470px){
-    .logo1 {
-      width: 6rem;
-    }
-    
-    .logo2 {
-      width: 25rem;
-      margin-left: 1rem;
-    }
-    
-    .nav-link {
-      color: #333333;
-      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-      font-size: 1.5rem;
-    }
+  .nav-link {
+    color: #333333;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 1rem;
+    text-align: center;
   }
 
+  .navbar-nav{
+    margin-left: 15%;
+   }
+}
+
+
+@media screen and (min-width: 769px)and (max-width: 1200px) {
+  .logo1 {
+    width: 4rem;
+  }
+
+  .logo2 {
+    width: 14rem;
+  }
+
+  .nav-link {
+    color: #333333;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 1.2rem;
+    text-align: center;
+  } 
+
+  .navbar-nav{
+    margin-left: 25%;
+   }
+}
+
+@media screen and (min-width: 1201px) and (max-width: 1470px) {
+  .logo1 {
+    width: 6rem;
+  }
+
+  .logo2 {
+    width: 25rem;
+    margin-left: 1rem;
+  }
+
+  .nav-link {
+    color: #333333;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 1.5rem;
+  }  
+
+  .navbar-nav{
+    margin-left: 32%;
+   }
+}
