--- a/src/app/coi/coi.component.html
+++ b/src/app/coi/coi.component.html
@@ -8,7 +8,7 @@
         <div class="col-ms-12 col-lg-4">
             <div class="circle">
                 <p>
-                    LSA follows a struct “no conflict of interest” 
+                    LSA follows a strict “no conflict of interest” 
                     policy to avoid any potential or actual prejudice 
                     to its clients.
                 </p>
@@ -26,7 +26,7 @@
         <div class="col-ms-12 col-lg-4">
             <div class="circle"st>
                 <p class="textcen">
-                    Commercial maters agreements can be reached on a varied fee structure, 
+                    Commercial matters agreements can be reached on a varied fee structure, 
                     depending on successful outcomes of transactions or otherwise.
                 </p>
             </div>      
