--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -40,7 +40,7 @@
         </div>
         <div class="col-sm-8 col-lg-8">
           <p class="text">
-            lindy@lsattorneys.net
+             <a href="lindy@lsattorneys.net">lindy@lsattorneys.net</a> 
           </p>
         </div>
       </div>
@@ -67,7 +67,7 @@
           <img src="assets/images/email.png"
             class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="Image not found!">
           <p class="text">
-            lindy@lsattorneys.net
+            <a href="mailto:lindy@lsattorneys.net">lindy@lsattorneys.net</a>
           </p>
   
         </div>
@@ -77,7 +77,7 @@
       <img src="assets/images/face.png"
         class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="">
       <p class="vertical-center">
-        <a href="https://www.facebook.com/lsinlaw/" class="remove">@lsinlaw</a>
+        <a href="https://www.facebook.com/lsinlaw/" class="remove" target="_blank" rel="noopener noreferrer">@lsinlaw</a>
       </p>
     </div>
 </div>
