--- a/src/app/coi/coi.component.css
+++ b/src/app/coi/coi.component.css
@@ -12,6 +12,7 @@ body{
     margin: auto;
     padding: 2rem;    
     margin-bottom: 1rem;    
+    font-family:  Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .heading{
