--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -18,6 +18,7 @@
   font-size: 1rem;
   margin: auto;
   margin-top: 30rem;
+  font-family:  Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 } 
 
 .headingtext {
