--- a/src/app/services/services.component.scss
+++ b/src/app/services/services.component.scss
@@ -11,6 +11,8 @@
   text-align: center;
   color: black;  
   text-decoration: none; 
+  font-family:  Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  letter-spacing: 0.02rem;
   
 }
 
@@ -98,6 +100,7 @@
   border-style: solid; 
   padding-top: 3.5rem; 
   margin-top: 1rem; 
+  font-family:  Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .circle:hover{
@@ -141,6 +144,7 @@
   border-style: solid; 
   padding-top: 3.5rem; 
   margin-top: 1rem; 
+  font-family:  Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
 }
 
 .circle:hover{
